Fix tests and notebook

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -455,8 +455,8 @@
    },
    "outputs": [],
    "source": [
-    "from pome import simulator\n",
-    "trades = simulator.simple_buy_sell(mkt, sig, target_column_name=\"???\")"
+    "from pome import strategies\n",
+    "trades = strategies.simple_buy_sell(mkt, sig, target_column_name=\"???\")"
    ]
   },
   {
