Replace name in notebook and docs

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pome"
+    "import backlight"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pome import signal\n",
+    "from backlight import signal\n",
     "\n",
     "SYMBOL = \"USDJPY\"\n",
     "sig = signal.load_signal(SYMBOL, sig_url, start_dt, end_dt)"
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pome import datasource\n",
+    "from backlight import datasource\n",
     "\n",
     "mkt = datasource.load_marketdata(\n",
     "    sig.symbol,\n",
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pome import labelizer\n",
+    "from backlight import labelizer\n",
     "\n",
     "\n",
     "lbl = labelizer.generate_labels(\n",
@@ -455,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "from pome import strategies\n",
+    "from backlight import strategies\n",
     "trades = strategies.simple_buy_sell(mkt, sig, target_column_name=\"???\")"
    ]
   },
@@ -556,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pome import metrics\n",
+    "# from backlight import metrics\n",
     "# Not Implemented\n",
     "# m_model = metrics.calc_metrics(sig, lbl)"
    ]
@@ -574,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pome import positions\n",
+    "from backlight import positions\n",
     "positions = positions.calc_positions(trades, mkt)"
    ]
   },
@@ -676,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pome import metrics\n",
+    "from backlight import metrics\n",
     "pl = metrics.evaluate_position(positions)"
    ]
   },
@@ -718,7 +718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pome import portfolio\n",
+    "# from backlight import portfolio\n",
     "# portfolio = portfolio.calc_positions(trades, mkt)"
    ]
   },
@@ -760,13 +760,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-edcb6cadabaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpome\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplots\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplots\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistorical_signals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmkt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlbl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-edcb6cadabaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbacklight\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplots\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplots\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistorical_signals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmkt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlbl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mImportError\u001b[0m: cannot import name 'plots'"
      ]
     }
    ],
    "source": [
-    "from pome import plots\n",
+    "from backlight import plots\n",
     "plots.historical_signals(mkt, sig, lbl)"
    ]
   },
