Fix the csv reader

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -133,13 +133,6 @@
        "      <th>up</th>\n",
        "      <th>pred</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -183,7 +176,6 @@
       ],
       "text/plain": [
        "                         down   neutral        up  pred\n",
-       "Unnamed: 0                                             \n",
        "2018-06-09 23:59:20  0.148715  0.551230  0.300055   0.0\n",
        "2018-06-09 23:59:30  0.157524  0.698833  0.143643   0.0\n",
        "2018-06-09 23:59:40  0.424951  0.315313  0.259736  -1.0\n",
@@ -272,11 +264,6 @@
        "      <th>ask</th>\n",
        "      <th>bid</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -310,7 +297,6 @@
       ],
       "text/plain": [
        "                           ask        bid\n",
-       "Unnamed: 0                               \n",
        "2018-06-09 23:59:20  39.916218  39.896218\n",
        "2018-06-09 23:59:30  39.750804  39.730804\n",
        "2018-06-09 23:59:40  39.932591  39.912591\n",
@@ -390,12 +376,6 @@
        "      <th>label_diff</th>\n",
        "      <th>label</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -434,7 +414,6 @@
       ],
       "text/plain": [
        "                           mid  label_diff  label\n",
-       "Unnamed: 0                                       \n",
        "2018-06-03 00:00:00  80.257283   -0.854094   -1.0\n",
        "2018-06-03 00:00:10  80.010294   -0.446213   -1.0\n",
        "2018-06-03 00:00:20  79.701448    0.156435    1.0\n",
@@ -551,12 +530,6 @@
        "      <th>label</th>\n",
        "      <th>neutral_range</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -595,7 +568,6 @@
       ],
       "text/plain": [
        "                     label_diff  label  neutral_range\n",
-       "Unnamed: 0                                           \n",
        "2018-06-03 00:00:00   -0.854094   -1.0       0.854094\n",
        "2018-06-03 00:00:10   -0.446213    0.0       0.601208\n",
        "2018-06-03 00:00:20    0.156435    0.0       0.376667\n",
@@ -706,12 +678,6 @@
        "      <th>ask</th>\n",
        "      <th>bid</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -750,7 +716,6 @@
       ],
       "text/plain": [
        "                     amount        ask        bid\n",
-       "Unnamed: 0                                       \n",
        "2018-06-03 00:00:00     0.0  80.267283  80.247283\n",
        "2018-06-03 00:00:10     0.0  80.020294  80.000294\n",
        "2018-06-03 00:00:20     1.0  79.711448  79.691448\n",
@@ -787,7 +752,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -814,13 +781,6 @@
        "      <th>bid</th>\n",
        "      <th>amount</th>\n",
        "      <th>price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -865,7 +825,6 @@
       ],
       "text/plain": [
        "                           ask        bid  amount      price\n",
-       "Unnamed: 0                                                  \n",
        "2018-06-03 00:00:00  80.267283  80.247283     0.0  80.257283\n",
        "2018-06-03 00:00:10  80.020294  80.000294     0.0  80.010294\n",
        "2018-06-03 00:00:20  79.711448  79.691448     1.0  79.701448\n",
@@ -1078,20 +1037,6 @@
     "m = metrics.calc_metrics(sig, lbl_dyn)\n",
     "m"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
