--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -802,7 +802,7 @@
       "cell_type": "code",
       "source": [
         "from backlight import strategies\n",
-        "trades = strategies.simple_buy_sell(mkt, sig, target_column_name=\"???\")"
+        "trades = strategies.simple_buy_sell(mkt, sig)"
       ],
       "execution_count": 0,
       "outputs": []
