--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -895,7 +895,7 @@
       },
       "cell_type": "code",
       "source": [
-        "trade.tail()"
+        "trade.amount.tail()"
       ],
       "execution_count": 0,
       "outputs": [
