--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -865,7 +865,7 @@
       "cell_type": "code",
       "source": [
         "from backlight import strategies\n",
-        "trades = strategies.simple_entry(mkt, sig, max_holding_time=pd.Timedelta('30min'))"
+        "trades = strategies.simple_entry_and_exit(mkt, sig, max_holding_time=pd.Timedelta('30min'))"
       ],
       "execution_count": 0,
       "outputs": []
