constrct - generate -> create

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -484,7 +484,7 @@
         "from backlight.labelizer.ternary.fixed_neutral import FixedNeutralLabelizer\n",
         "\n",
         "\n",
-        "lbl_fix = labelizer.generate_labels(\n",
+        "lbl_fix = labelizer.create_labels(\n",
         "    mkt,\n",
         "    FixedNeutralLabelizer(\n",
         "        lookahead=\"3Min\",\n",
@@ -674,7 +674,7 @@
       "source": [
         "from backlight.labelizer.ternary.dynamic_neutral import DynamicNeutralLabelizer\n",
         "\n",
-        "lbl_dyn = labelizer.generate_labels(\n",
+        "lbl_dyn = labelizer.create_labels(\n",
         "    mkt,\n",
         "    DynamicNeutralLabelizer(\n",
         "        lookahead=\"3Min\",\n",
